src/empathy-video-widget.c
@@ -22,21 +22,15 @@
 #include <stdio.h>
 #include <stdlib.h>
 
-#include <gdk/gdkx.h>
-#include <gst/interfaces/xoverlay.h>
-#include <gst/farsight/fs-element-added-notifier.h>
+#include <gst/base/gstbasesink.h>
+#include <clutter-gtk/clutter-gtk.h>
+#include <clutter-gst/clutter-gst.h>
 
 #include "empathy-video-widget.h"
 
 G_DEFINE_TYPE(EmpathyVideoWidget, empathy_video_widget,
-  GTK_TYPE_DRAWING_AREA)
+  GTK_CLUTTER_TYPE_EMBED)
 
-static void empathy_video_widget_element_added_cb (
-  FsElementAddedNotifier *notifier, GstBin *bin, GstElement *element,
-  EmpathyVideoWidget *self);
-
-static void empathy_video_widget_sync_message_cb (
-  GstBus *bus, GstMessage *message, EmpathyVideoWidget *self);
 
 /* signal enum */
 #if 0
@@ -51,8 +45,6 @@ static guint signals[LAST_SIGNAL] = {0};
 enum {
   PROP_GST_ELEMENT = 1,
   PROP_GST_BUS,
-  PROP_MIN_WIDTH,
-  PROP_MIN_HEIGHT,
   PROP_SYNC,
   PROP_ASYNC,
 };
@@ -64,59 +56,67 @@ struct _EmpathyVideoWidgetPriv
 {
   gboolean dispose_has_run;
   GstBus *bus;
-  GstElement *videosink;
+  GstElement *videosink, *sink;
   GstPad *sink_pad;
-  GstElement *overlay;
-  FsElementAddedNotifier *notifier;
-  gint min_width;
-  gint min_height;
-  gboolean sync;
-  gboolean async;
-
-  GMutex *lock;
+  gulong notify_allocation_id;
 };
 
 #define GET_PRIV(o)     (G_TYPE_INSTANCE_GET_PRIVATE ((o), \
   EMPATHY_TYPE_VIDEO_WIDGET, EmpathyVideoWidgetPriv))
 
+static void empathy_video_widget_dispose (GObject *object);
+
 static void
-empathy_video_widget_init (EmpathyVideoWidget *obj)
+on_stage_allocation_changed (ClutterActor *stage, GParamSpec *pspec, ClutterBox *box)
 {
-  EmpathyVideoWidgetPriv *priv = GET_PRIV (obj);
-  GdkRGBA black;
-
-  priv->lock = g_mutex_new ();
-
-  priv->notifier = fs_element_added_notifier_new ();
-  g_signal_connect (priv->notifier, "element-added",
-    G_CALLBACK (empathy_video_widget_element_added_cb),
-    obj);
-
-  if (gdk_rgba_parse (&black, "Black"))
-    gtk_widget_override_background_color (GTK_WIDGET (obj), 0, &black);
-
-  gtk_widget_set_double_buffered (GTK_WIDGET (obj), FALSE);
+  gfloat w, h;
+  clutter_actor_get_size (stage, &w, &h);
+  clutter_actor_set_size (CLUTTER_ACTOR (box), w, h);
 }
 
-static void
-empathy_video_widget_realized (GtkWidget *widget, gpointer user_data)
-{
-  /* requesting the XID forces the GdkWindow to be native in GTK+ 2.18
-   * onwards, requesting the native window in a thread causes a BadWindowID,
-   * so we need to request it now. We could call gdk_window_ensure_native(),
-   * but that would mean we require GTK+ 2.18, so instead we call this */
-  GDK_WINDOW_XID (gtk_widget_get_window (GTK_WIDGET (widget)));
-}
-
-static void
-empathy_video_widget_constructed (GObject *object)
+static ClutterActor*
+create_clutter_texture(EmpathyVideoWidget *object)
 {
   EmpathyVideoWidgetPriv *priv = GET_PRIV (object);
-  GstElement *colorspace, *videoscale, *sink;
+  ClutterActor           *texture, *stage, *box;
+  ClutterLayoutManager   *layout;
+
+  stage = gtk_clutter_embed_get_stage (GTK_CLUTTER_EMBED (object));
+  g_assert (stage != NULL);
+  clutter_stage_set_color (CLUTTER_STAGE(stage), CLUTTER_COLOR_Black);
+
+
+  layout = clutter_bin_layout_new (CLUTTER_BIN_ALIGNMENT_CENTER,
+    CLUTTER_BIN_ALIGNMENT_CENTER);
+  g_assert (layout != NULL);
+  box = clutter_box_new (layout);
+  g_assert (box != NULL);
+
+  clutter_container_add_actor (CLUTTER_CONTAINER (stage), box);
+  priv->notify_allocation_id = g_signal_connect (stage, "notify::allocation",
+    G_CALLBACK(on_stage_allocation_changed), box);
+
+
+  texture = clutter_texture_new ();
+  g_assert (texture != NULL);
+
+  clutter_texture_set_keep_aspect_ratio (CLUTTER_TEXTURE (texture), TRUE);
+  g_object_ref (G_OBJECT (texture));
+  clutter_box_pack (CLUTTER_BOX (box), texture, NULL, NULL);
+
+  return texture;
+}
+
+
+static void
+empathy_video_widget_init (EmpathyVideoWidget *object)
+{
+  EmpathyVideoWidgetPriv *priv = GET_PRIV (object);
+  GstElement *colorspace, *videoscale;
+  ClutterActor *texture;
   GstPad *pad;
 
-  g_signal_connect (object, "realize",
-      G_CALLBACK (empathy_video_widget_realized), NULL);
+  texture = create_clutter_texture (object);
 
   priv->videosink = gst_bin_new (NULL);
 
@@ -125,8 +125,9 @@ empathy_video_widget_constructed (GObject *object)
 
   priv->sink_pad = gst_element_get_static_pad (priv->videosink, "sink");
 
-  sink = gst_element_factory_make ("gconfvideosink", NULL);
-  g_assert (sink != NULL);
+  priv->sink = clutter_gst_video_sink_new (CLUTTER_TEXTURE (texture));
+  g_object_unref (G_OBJECT (texture));
+  g_assert (priv->sink != NULL);
 
   videoscale = gst_element_factory_make ("videoscale", NULL);
   g_assert (videoscale != NULL);
@@ -138,13 +139,15 @@ empathy_video_widget_constructed (GObject *object)
 
   g_object_set (colorspace, "qos", FALSE, NULL);
 
+  /* keep a reference so we can set it's "sync" or "async" properties */
+  gst_object_ref (priv->sink);
   gst_bin_add_many (GST_BIN (priv->videosink), colorspace, videoscale,
-    sink, NULL);
+    priv->sink, NULL);
 
   if (!gst_element_link (colorspace, videoscale))
     g_error ("Failed to link ffmpegcolorspace and videoscale");
 
-  if (!gst_element_link (videoscale, sink))
+  if (!gst_element_link (videoscale, priv->sink))
     g_error ("Failed to link videoscale and gconfvideosink");
 
   pad = gst_element_get_static_pad (colorspace, "sink");
@@ -155,53 +158,28 @@ empathy_video_widget_constructed (GObject *object)
     g_error ("Couldn't add sink ghostpad to the bin");
 
   gst_object_unref (pad);
-
-  fs_element_added_notifier_add (priv->notifier, GST_BIN (priv->videosink));
-  gst_bus_enable_sync_message_emission (priv->bus);
-
-  g_signal_connect (priv->bus, "sync-message",
-    G_CALLBACK (empathy_video_widget_sync_message_cb), object);
-
-  gtk_widget_set_size_request (GTK_WIDGET (object), priv->min_width,
-    priv->min_height);
 }
 
-static void empathy_video_widget_dispose (GObject *object);
-static void empathy_video_widget_finalize (GObject *object);
-
-
-static gboolean empathy_video_widget_draw (GtkWidget *widget,
-  cairo_t *cr);
-
-static void
-empathy_video_widget_element_set_sink_properties (EmpathyVideoWidget *self);
 
 static void
 empathy_video_widget_set_property (GObject *object,
   guint property_id, const GValue *value, GParamSpec *pspec)
 {
   EmpathyVideoWidgetPriv *priv = GET_PRIV (object);
+  gboolean boolval;
 
   switch (property_id)
     {
       case PROP_GST_BUS:
         priv->bus = g_value_dup_object (value);
         break;
-      case PROP_MIN_WIDTH:
-        priv->min_width = g_value_get_int (value);
-        break;
-      case PROP_MIN_HEIGHT:
-        priv->min_height = g_value_get_int (value);
-        break;
       case PROP_SYNC:
-        priv->sync = g_value_get_boolean (value);
-        empathy_video_widget_element_set_sink_properties (
-          EMPATHY_VIDEO_WIDGET (object));
+        boolval = g_value_get_boolean (value);
+        gst_base_sink_set_sync (GST_BASE_SINK (priv->sink), boolval);
         break;
       case PROP_ASYNC:
-        priv->async = g_value_get_boolean (value);
-        empathy_video_widget_element_set_sink_properties (
-          EMPATHY_VIDEO_WIDGET (object));
+        boolval = g_value_get_boolean (value);
+        gst_base_sink_set_async_enabled (GST_BASE_SINK (priv->sink), boolval);
         break;
       default:
         G_OBJECT_WARN_INVALID_PROPERTY_ID (object, property_id, pspec);
@@ -213,6 +191,7 @@ empathy_video_widget_get_property (GObject *object,
   guint property_id, GValue *value, GParamSpec *pspec)
 {
   EmpathyVideoWidgetPriv *priv = GET_PRIV (object);
+  gboolean boolval;
 
   switch (property_id)
     {
@@ -222,17 +201,13 @@ empathy_video_widget_get_property (GObject *object,
       case PROP_GST_BUS:
         g_value_set_object (value, priv->bus);
         break;
-      case PROP_MIN_WIDTH:
-        g_value_set_int (value, priv->min_width);
-        break;
-      case PROP_MIN_HEIGHT:
-        g_value_set_int (value, priv->min_height);
-        break;
       case PROP_SYNC:
-        g_value_set_boolean (value, priv->sync);
+        boolval = gst_base_sink_get_sync (GST_BASE_SINK (priv->sink));
+        g_value_set_boolean (value, boolval);
         break;
       case PROP_ASYNC:
-        g_value_set_boolean (value, priv->async);
+        boolval = gst_base_sink_is_async_enabled (GST_BASE_SINK (priv->sink));
+        g_value_set_boolean (value, boolval);
         break;
       default:
         G_OBJECT_WARN_INVALID_PROPERTY_ID (object, property_id, pspec);
@@ -245,21 +220,15 @@ empathy_video_widget_class_init (
   EmpathyVideoWidgetClass *empathy_video_widget_class)
 {
   GObjectClass *object_class = G_OBJECT_CLASS (empathy_video_widget_class);
-  GtkWidgetClass *widget_class =
-    GTK_WIDGET_CLASS (empathy_video_widget_class);
   GParamSpec *param_spec;
 
   g_type_class_add_private (empathy_video_widget_class,
     sizeof (EmpathyVideoWidgetPriv));
 
   object_class->dispose = empathy_video_widget_dispose;
-  object_class->finalize = empathy_video_widget_finalize;
-  object_class->constructed = empathy_video_widget_constructed;
 
   object_class->set_property = empathy_video_widget_set_property;
   object_class->get_property = empathy_video_widget_get_property;
-
-  widget_class->draw = empathy_video_widget_draw;
 
   param_spec = g_param_spec_object ("gst-element",
     "gst-element", "The underlaying gstreamer element",
@@ -273,20 +242,6 @@ empathy_video_widget_class_init (
     GST_TYPE_BUS,
     G_PARAM_CONSTRUCT_ONLY | G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS);
   g_object_class_install_property (object_class, PROP_GST_BUS, param_spec);
-
-  param_spec = g_param_spec_int ("min-width",
-    "min-width",
-    "Minimal width of the widget",
-    0, G_MAXINT, EMPATHY_VIDEO_WIDGET_DEFAULT_WIDTH,
-    G_PARAM_CONSTRUCT_ONLY | G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS);
-  g_object_class_install_property (object_class, PROP_MIN_WIDTH, param_spec);
-
-  param_spec = g_param_spec_int ("min-height",
-    "min-height",
-    "Minimal height of the widget",
-    0, G_MAXINT, EMPATHY_VIDEO_WIDGET_DEFAULT_HEIGHT,
-    G_PARAM_CONSTRUCT_ONLY | G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS);
-  g_object_class_install_property (object_class, PROP_MIN_HEIGHT, param_spec);
 
   param_spec = g_param_spec_boolean ("sync",
     "sync",
@@ -303,7 +258,7 @@ empathy_video_widget_class_init (
   g_object_class_install_property (object_class, PROP_ASYNC, param_spec);
 }
 
-void
+static void
 empathy_video_widget_dispose (GObject *object)
 {
   EmpathyVideoWidget *self = EMPATHY_VIDEO_WIDGET (object);
@@ -314,8 +269,13 @@ empathy_video_widget_dispose (GObject *object)
 
   priv->dispose_has_run = TRUE;
 
-  g_signal_handlers_disconnect_by_func (priv->bus,
-    empathy_video_widget_sync_message_cb, object);
+  if (priv->notify_allocation_id != 0) {
+    ClutterActor *stage;
+    stage = gtk_clutter_embed_get_stage (GTK_CLUTTER_EMBED (object));
+    g_signal_handler_disconnect (stage, priv->notify_allocation_id);
+    priv->notify_allocation_id = 0;
+  }
+
 
   if (priv->bus != NULL)
     g_object_unref (priv->bus);
@@ -327,6 +287,10 @@ empathy_video_widget_dispose (GObject *object)
 
   priv->videosink = NULL;
 
+  if (priv->sink != NULL)
+    g_object_unref (priv->sink);
+
+  priv->sink = NULL;
 
   /* release any references held by the object here */
 
@@ -334,130 +298,11 @@ empathy_video_widget_dispose (GObject *object)
     G_OBJECT_CLASS (empathy_video_widget_parent_class)->dispose (object);
 }
 
-void
-empathy_video_widget_finalize (GObject *object)
-{
-  EmpathyVideoWidget *self = EMPATHY_VIDEO_WIDGET (object);
-  EmpathyVideoWidgetPriv *priv = GET_PRIV (self);
-
-  /* free any data held directly by the object here */
-  g_mutex_free (priv->lock);
-
-  G_OBJECT_CLASS (empathy_video_widget_parent_class)->finalize (object);
-}
-
-
-static void
-empathy_video_widget_element_set_sink_properties_unlocked (
-  EmpathyVideoWidget *self)
-{
-  EmpathyVideoWidgetPriv *priv = GET_PRIV (self);
-
-  if (priv->overlay == NULL)
-    return;
-
-  if (g_object_class_find_property (G_OBJECT_GET_CLASS (priv->overlay),
-      "force-aspect-ratio"))
-    g_object_set (G_OBJECT (priv->overlay), "force-aspect-ratio", TRUE, NULL);
-
-  if (g_object_class_find_property (
-      G_OBJECT_GET_CLASS (priv->overlay), "sync"))
-    g_object_set (G_OBJECT (priv->overlay), "sync", priv->sync, NULL);
-
-  if (g_object_class_find_property (G_OBJECT_GET_CLASS (priv->overlay),
-      "async"))
-    g_object_set (G_OBJECT (priv->overlay), "async", priv->async, NULL);
-}
-
-static void
-empathy_video_widget_element_set_sink_properties (EmpathyVideoWidget *self)
-{
-  EmpathyVideoWidgetPriv *priv = GET_PRIV (self);
-
-  g_mutex_lock (priv->lock);
-  empathy_video_widget_element_set_sink_properties_unlocked (self);
-  g_mutex_unlock (priv->lock);
-}
-
-static void
-empathy_video_widget_element_added_cb (FsElementAddedNotifier *notifier,
-  GstBin *bin, GstElement *element, EmpathyVideoWidget *self)
-{
-  EmpathyVideoWidgetPriv *priv = GET_PRIV (self);
-
-  /* We assume the overlay is the sink */
-  g_mutex_lock (priv->lock);
-  if (priv->overlay == NULL && GST_IS_X_OVERLAY (element))
-    {
-      priv->overlay = element;
-      g_object_add_weak_pointer (G_OBJECT (element),
-        (gpointer) &priv->overlay);
-      empathy_video_widget_element_set_sink_properties_unlocked (self);
-      gst_x_overlay_expose (GST_X_OVERLAY (priv->overlay));
-    }
-  g_mutex_unlock (priv->lock);
-}
-
-static void
-empathy_video_widget_sync_message_cb (GstBus *bus, GstMessage *message,
-  EmpathyVideoWidget *self)
-{
-  EmpathyVideoWidgetPriv *priv = GET_PRIV (self);
-  const GstStructure *s;
-
-  if (GST_MESSAGE_TYPE (message) != GST_MESSAGE_ELEMENT)
-    return;
-
-  if (GST_MESSAGE_SRC (message) != (GstObject *) priv->overlay)
-    return;
-
-  s = gst_message_get_structure (message);
-
-  if (gst_structure_has_name (s, "prepare-xwindow-id"))
-    {
-      g_assert (gtk_widget_get_realized (GTK_WIDGET (self)));
-      gst_x_overlay_set_xwindow_id (GST_X_OVERLAY (priv->overlay),
-        GDK_WINDOW_XID (gtk_widget_get_window (GTK_WIDGET (self))));
-    }
-}
-
-static gboolean
-empathy_video_widget_draw (GtkWidget *widget,
-    cairo_t *cr)
-{
-  EmpathyVideoWidget *self = EMPATHY_VIDEO_WIDGET (widget);
-  EmpathyVideoWidgetPriv *priv = GET_PRIV (self);
-  GtkAllocation allocation;
-
-  if (priv->overlay == NULL)
-    {
-      gtk_widget_get_allocation (widget, &allocation);
-
-      gtk_render_frame (gtk_widget_get_style_context (widget), cr,
-          0, 0,
-          gtk_widget_get_allocated_width (widget),
-          gtk_widget_get_allocated_height (widget));
-      return TRUE;
-    }
-
-  gst_x_overlay_set_xwindow_id (GST_X_OVERLAY (priv->overlay),
-    GDK_WINDOW_XID (gtk_widget_get_window (widget)));
-
-  gst_x_overlay_expose (GST_X_OVERLAY (priv->overlay));
-
-  return TRUE;
-}
-
 GtkWidget *
 empathy_video_widget_new_with_size (GstBus *bus, gint width, gint height)
 {
-  g_return_val_if_fail (bus != NULL, NULL);
-
-  return GTK_WIDGET (g_object_new (EMPATHY_TYPE_VIDEO_WIDGET,
-    "gst-bus", bus,
-    "min-width", width,
-    "min-height", height,
-    NULL));
+  /* ignoring width, height: will use the full extent of the container */
+  return empathy_video_widget_new (bus);
 }
 
 GtkWidget *
